Bug 452475 - Invalid howto link in description of class KDEDModule
Summary: Invalid howto link in description of class KDEDModule
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kdbusaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.93.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-10 18:11 UTC by Ralf Habacker
Modified: 2022-05-04 21:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2022-04-10 18:11:57 UTC
SUMMARY
The documentation of the class KDEDModule (see ) refers to an invalid link to the related howto.

STEPS TO REPRODUCE
1. see detailed documentation of class KDEDModule at https://api.kde.org/frameworks/kdbusaddons/html/classKDEDModule.html

OBSERVED RESULT
The mentioned link  'kdelibs/kded/HOWTO' is invalid, there is no such file present in the related git repository (https://invent.kde.org/frameworks/kdbusaddons)

EXPECTED RESULT
It should point to the related howto (which is currently located at https://invent.kde.org/frameworks/kded/-/blob/master/docs/HOWTO)
Comment 1 Ahmad Samir 2022-05-04 21:10:50 UTC
Git commit 1bd4304ad95b9ace57be2822bf258f8e08055a27 by Ahmad Samir.
Committed on 04/05/2022 at 21:10.
Pushed by ahmadsamir into branch 'master'.

KDEDModule: fix link to kded HOWTO in API docs

GIT_SILENT

M  +4    -3    src/kdedmodule.h

https://invent.kde.org/frameworks/kdbusaddons/commit/1bd4304ad95b9ace57be2822bf258f8e08055a27