KDEDModule: fix link to kded HOWTO in API docs

GIT_SILENT

BUG: 452475